2007-04-06 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Christine.py.in:
		- Support for internet radio stations that use the 
		m3u file format.
2007-04-05 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Christine.py.in:
		- Support for somafm (and all .pls radio stations)
		- Fixed a bug where the openRemote method don't push
		the play button to play.
2007-04-04 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Makefile.am: 
		Added the -fPIC to the gcc command in order to compile in
		64 bits systems.
		Fixed a bug where libchristine/Validator.py wheren't 
		installed
	* libchristine/Christine.py.in:
		Fixed bug #1694684 where Core Window is resizable in small view mode

2007-03-29 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Chrinstine.py.in:
		Fixed a bug when trying to get the Small View mode.
		Ctrl+F wasn't focusing the Search box. Fixed.
		Fixed a try icon Bug, it wasn't showing up
	* cplugins/show_properties.py:
		Fixed some bugs with the Discoverer module
2007-03-24 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Display.py: 
		Fixed a small bug in the main rectangle draw.
		Fixed a small bug in the calculation of the progress bar
		width affecting the value.
	* libchristine/Christine.py.in: 
		Fixed a blocker bug in the 	FullScreen mode.
		Fixed the Import to queue
	* libchristine/Queue.py: 
		Fixed the Import to queue
2007-03-14 Marco Antonio Islas Cruz	<markuz@islascruz.org>
	* renaming lib_christine to libchristine affecting all
	module import.
	* firxin module import

2007-03-13 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* Appending the current dir to the PYTHON_PATH, usefull
	when we like to use the current modules (ej. in development)
	* Fixing a lot of missed names in several modules.
	* Fixing the PATH in lib_christine/Share.py.in, in the case
	that gui/ directory exists, try to use it.
	* Fixing several modules using this kind of for
		for (i in range(x))